src/test/deca/context/invalid/class/65-doubleDeclParam3.deca
/* Description:
    teste la regle (3.12) de la vérification contextuelles
    Double Déclaration de paramètres

    Historique:
      cree le 21/01/2020
*/

class A {
  int methode(C a, B b, Object c, C d, A a){} // double declaration de a
}

class C {

}
class B {

}
